# FOS-Project

./: FOS-storybook-full.html
agents/: config.py  pyproject.toml
agents/graph/: __init__.py  base.py  errors.py  node_wrapper.py  state.py  tools.py  tracing.py
agents/state_diagram/: agent_state_diagram.excalidraw
deep-dives/03-semantic-layer/: deep-dive.html
deep-dives/04-rag-pipeline/: deep-dive.html
deep-dives/06-agent-runtime/: deep-dive.html
deep-dives/07-data-flows/: deep-dive.html
docs/: FOS-storybook.html  build-full.py
docs/deep-dives/: _template.html
docs/slides/: slide0-problem.html  slide1-journeys.html  slide10-gaps.html  slide2-solution.html  slide3-architecture.html  slide6-semantic.html  slide7-agents.html
poc/fos_agent/: .env.example  main.py  pyproject.toml
poc/fos_agent/src/: main.py
poc/fos_agent/src/graph_model/: agent_run.py
poc/fos_agent/src/graph_model/agent_tools/: call_cortex_llm_tool.py  query_semantic_view_tool.py  register_tool.py  sales_analyst_tool.py  write_hybrid_table_tool.py
poc/fos_agent/src/graph_model/graph_builder/: agent_graph.py
poc/fos_agent/src/graph_model/node/: agent.py  tool.py  validate.py
poc/fos_agent/src/graph_model/router/: routing_logic.py
poc/fos_agent/src/graph_model/state/: agentstate.py
poc/fos_agent/src/pub_sub_model/: agent_trigger.py  consumer.py  event_hub_config.py  event_schema.py  publisher.py
poc/fos_agent/src/utility/: helper_func.py  snowflake_session.py
slides/: slide4-data-pipeline.html  slide5-data-model.html  slide8-status.html  slide9-deepdives.html
(+14 files in other folders)
