[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-snowflake>=0.2.2",
    "langgraph>=0.6.11",
    "langgraph-checkpoint-snowflake>=0.1.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
]
